Fixed bg and item alignment issue on mobile nav
Added inline style to conditinaly rendered component.

--- a/src/Navbar/NavbarMobile.css
+++ b/src/Navbar/NavbarMobile.css
@@ -38,6 +38,7 @@
     height: 31px;
     margin-top: 5px;
     margin-right: 7.5%;
+    z-index: 12;
   }
 }
 
